flux/apps/grackdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grackdb

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grackdb

  template:
    metadata:
      labels:
        app: grackdb

    spec:
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database

      containers:
        - name: grackdb
          image: ghcr.io/fogo-sh/grackdb:latest
          imagePullPolicy: Always

          volumeMounts:
            - mountPath: /data
              name: database

          ports:
            - name: http
              containerPort: 8081
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          readinessProbe:
            httpGet:
              path: /
              port: http
