flux/apps/grackdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grackdb

spec:
  selector:
    app: grackdb

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
