flux/apps/grackdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grackdb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - grackdb.fogo-sh
      secretName: grackdb-fogo-sh
  rules:
    - host: grackdb.fogo.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grackdb
                port:
                  name: http
